[tool.poetry]
name = "podb"
version = "0.1.0"
description = "Python bytecode-level debugger"
authors = ["Gabriele N. Tornetta <phoenix1987@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
bytecode = "^0.13.0"
rich = "^12.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
podb = "podb.__main__:main"
